--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 psutil==5.9.6
 numpy==1.19.5
-scipy==1.6.0
-scapy==2.4.5
+scipy==1.4.1
+numpy==1.18
+scapy==2.5.0
 cicflowmeter==0.1.6
 python-dotenv==0.20.0
 pyshark==0.6
